--- a/css/app.css
+++ b/css/app.css
@@ -41,16 +41,15 @@ nav {
     text-decoration: none;
     letter-spacing: .5px; }
 
-li div {
+li .nav-effect {
   background-color: salmon;
   height: 1px;
-  width: 100%;
   transform: translate(0, -15px);
   visibility: hidden;
   transition: .1s;
   transition-timing-function: ease-in-out; }
 
-li a:hover + div {
+li a:hover + .nav-effect {
   transition: .4s;
   visibility: visible;
   transform: translate(0, 0); }
@@ -58,12 +57,58 @@ li a:hover + div {
 main {
   padding: 0px 10%; }
 
+#loading-bar {
+  width: 0%;
+  height: 5px;
+  background-color: grey;
+  border-radius: 30px;
+  transition: 3s; }
+
 .about .about-img {
   height: 300px;
   width: 300px;
-  background-image: url("https://pokemonletsgo.pokemon.com/assets/img/common/char-pikachu.png");
+  background-color: black;
   background-position: 65% 40%;
   border-radius: 50%; }
 
 .about .content {
   width: 50%; }
+
+.project {
+  width: 100%; }
+  .project h1 {
+    text-align: center; }
+  .project .project-gallery {
+    height: 300px;
+    width: 500px;
+    border: black 1px solid;
+    margin: 0 auto; }
+
+.technical .tech-container {
+  width: 100%;
+  height: 300px;
+  background-color: yellow;
+  position: relative; }
+
+.technical h1 {
+  color: blue;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 120px;
+  z-index: 10; }
+
+.technical .circle {
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  background-color: pink;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  z-index: 5; }
+
+.contact h1 {
+  color: green; }
