--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,17 +2,82 @@ main {
     padding: 0px 10%;
 }
 
+#loading-bar {
+    width: 0%;
+    height: 5px;
+    background-color: grey;
+    border-radius: 30px;
+    transition: 3s;
+}
+
 // ABOUT
 .about {
     .about-img {
         height: 300px;
         width: 300px;
-        background-image: url('https://pokemonletsgo.pokemon.com/assets/img/common/char-pikachu.png');
+        // background-image: url('https://pokemonletsgo.pokemon.com/assets/img/common/char-pikachu.png');
+        background-color: black;
         background-position: 65% 40%;
         border-radius: 50%;
     }
 
     .content {
         width: 50%;
+    }
+}
+
+// PROJECTS
+.project {
+    width: 100%;
+
+    h1 {
+        text-align: center;
+    }
+
+    .project-gallery {
+        height: 300px;
+        width: 500px;
+        // background-image: url('https://pokemonletsgo.pokemon.com/assets/img/common/char-pikachu.png');
+        border: black 1px solid;
+        margin: 0 auto;
+    }
+}
+
+// TECHNICAL SKILLS
+.technical {
+    .tech-container {
+        width: 100%;
+        height: 300px;
+        background-color: yellow;
+        position: relative;
+    }
+
+    h1 {
+        color: blue;
+        position: absolute;
+        margin: auto;
+        left: 0;
+        right: 0;
+        top: 120px;
+        z-index: 10;
+    }
+
+    .circle {
+        height: 300px;
+        width: 300px;
+        border-radius: 50%;
+        background-color: pink;
+        position: absolute;
+        margin: auto;
+        left: 0;
+        right: 0;
+        z-index: 5;
+    }
+}
+
+// CONTACT
+.contact {
+    h1 {
+        color: green;
     }
 }
