--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth; }
+
 body {
   opacity: 0;
   transition: 1s;
@@ -10,6 +13,10 @@ ul {
 
 li {
   overflow: hidden; }
+
+h4 {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 200; }
 
 .banner {
   height: 70vH;
@@ -62,36 +69,49 @@ main {
   height: 5px;
   background-color: grey;
   border-radius: 30px;
-  transition: 3s; }
+  transition: 2s;
+  animation: loading;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-duration: 4s; }
 
-.about .about-img {
+#about .about-img {
   height: 300px;
   width: 300px;
-  background-color: black;
+  background-image: url("https://pokemonletsgo.pokemon.com/assets/img/common/char-pikachu.png");
   background-position: 65% 40%;
   border-radius: 50%; }
 
-.about .content {
+#about .content {
   width: 50%; }
 
-.project {
+#project {
   width: 100%; }
-  .project h1 {
+  #project h1 {
     text-align: center; }
-  .project .project-gallery {
-    height: 300px;
-    width: 500px;
+  #project .project-gallery {
+    height: 360px;
+    width: 640px;
+    background-size: cover;
     border: black 1px solid;
     margin: 0 auto; }
+  #project p {
+    font-style: italic; }
+  #project a {
+    color: black;
+    text-decoration: none;
+    transition: .2s; }
+    #project a:hover {
+      letter-spacing: .5px;
+      color: salmon;
+      transition: .2s; }
 
-.technical .tech-container {
+#technical .tech-container {
   width: 100%;
   height: 300px;
-  background-color: yellow;
   position: relative; }
 
-.technical h1 {
-  color: blue;
+#technical h2 {
   position: absolute;
   margin: auto;
   left: 0;
@@ -99,16 +119,89 @@ main {
   top: 120px;
   z-index: 10; }
 
-.technical .circle {
+#technical .circle {
   height: 300px;
   width: 300px;
   border-radius: 50%;
-  background-color: pink;
   position: absolute;
   margin: auto;
   left: 0;
   right: 0;
   z-index: 5; }
+  #technical .circle div {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    background-size: cover; }
 
-.contact h1 {
-  color: green; }
+#technical .html-img {
+  background-image: url("../imgs/html.png");
+  margin: auto;
+  top: -25px;
+  left: 0;
+  right: 0; }
+
+#technical .ps-img {
+  background-image: url("../imgs/ps.png");
+  left: 10px;
+  top: 25px; }
+
+#technical .placeholder3 {
+  background-image: url("../imgs/ps.png");
+  left: 240px;
+  top: 25px; }
+
+#technical .css-img {
+  background-image: url("../imgs/css.png");
+  left: -25px;
+  top: 40%; }
+
+#technical .js-img {
+  background-image: url("../imgs/js.png");
+  left: 275px;
+  top: 40%; }
+  #technical .js-img:hover {
+    animation-name: floating;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-duration: 4s; }
+
+#technical .jq-img {
+  background-image: url("../imgs/jq.png");
+  left: 10px;
+  top: 70%; }
+
+#technical .wp-img {
+  background-image: url("../imgs/wp.png");
+  left: 240px;
+  top: 70%; }
+
+#technical .php-img {
+  background-image: url("../imgs/php.png");
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: -25px; }
+
+#technical .html-img:hover, #technical .ps-img:hover, #technical .placeholder3:hover, #technical .css-img:hover, #technical .js-img:hover, #technical .php-img:hover, #technical .wp-img:hover, #technical .jq-img:hover {
+  animation-name: floating;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-duration: 4s; }
+
+#contact h1 {
+  color: black; }
+
+@keyframes floating {
+  50% {
+    transform: scale(1.1); } }
+
+@keyframes loading {
+  0% {
+    width: 1%; }
+  90% {
+    width: 100%;
+    opacity: 1; }
+  100% {
+    width: 100%;
+    opacity: 0; } }
