--- a/sass/general.scss
+++ b/sass/general.scss
@@ -1,10 +1,14 @@
 // GENERAL
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     opacity:0;
     transition: 1s;
     transform: translate(0, -150px);
-    }
+}
 
 ul {
     list-style-type: none;
@@ -14,4 +18,9 @@ ul {
 
 li {
     overflow: hidden;
+}
+
+h4 {
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 200;
 }
