Added revolving about image

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,3 +1,8 @@
 @import "general.scss";
 @import "header.scss";
-@import "main.scss";
+// @import "main.scss";
+@import "about.scss";
+@import "projects.scss";
+@import "technical.scss";
+@import "contact.scss";
+@import "footer.scss";
