--- a/sass/technical.scss
+++ b/sass/technical.scss
@@ -1,63 +1,3 @@
-// ABOUT
-#about {
-    .about-img {
-        height: 300px;
-        width: 300px;
-        background-image: url('https://pokemonletsgo.pokemon.com/assets/img/common/char-pikachu.png');
-        background-position: 65% 40%;
-        border-radius: 50%;
-    }
-
-    .content {
-        width: 50%;
-    }
-}
-
-#loading-bar {
-    width: 0%;
-    height: 5px;
-    background-color: grey;
-    border-radius: 30px;
-    transition: 2s;
-    animation: loading;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    animation-duration: 4s;
-}
-
-// PROJECTS
-#project {
-    width: 100%;
-
-    h1 {
-        text-align: center;
-    }
-
-    .project-gallery {
-        height: 360px;
-        width: 640px;
-        background-size: cover;
-        border: black 1px solid;
-        margin: 0 auto;
-    }
-
-    p {
-        font-style: italic;
-    }
-
-    a {
-        color: black;
-        text-decoration: none;
-        transition: .2s;
-
-        &:hover {
-            letter-spacing: .5px;
-            color:salmon;
-            transition: .2s;
-        }
-    }
-}
-
 // TECHNICAL SKILLS
 #technical {
     .tech-container {
@@ -109,7 +49,7 @@
     }
 
     .placeholder3{
-        background-image: url('../imgs/ps.png'); 
+        background-image: url('../imgs/ai.png'); 
         left: 240px;
         top: 25px;
     }
@@ -161,15 +101,6 @@
     }
 }
 
-// CONTACT
-#contact {
-    h1 {
-        color: black;
-    }
-}
-
-
-// ANIMATION KEYFRAMES
 @keyframes floating {
 	// 25% {
     //     transform: translate(0%,10%);	
@@ -181,18 +112,4 @@
 	// 75% {
 	// 	transform: translate(0%,-10%);	
 	// }			
-}
-
-@keyframes loading {
-    0% {
-        width: 1%;
-    }
-    90% {
-        width: 100%;
-        opacity:1;
-    }
-    100% {
-        width: 100%;
-        opacity: 0;
-    }
 }
