--- a/css/app.css
+++ b/css/app.css
@@ -19,11 +19,17 @@ h4 {
   font-weight: 200; }
 
 main {
+  overflow: hidden;
   padding: 0px 10%; }
 
-@media (max-width: 832px) {
+@media (max-width: 767px) {
   main {
-    padding: 0px 2%; } }
+    padding: 0px 2%; }
+  nav ul {
+    margin-left: 0px;
+    margin-right: 0px; }
+  #about .content {
+    text-align: center; } }
 
 .banner {
   height: 70vH;
@@ -36,9 +42,11 @@ main {
     padding-top: 120px;
     color: white; }
   .banner h1 {
-    font-size: 60px; }
+    font-size: 60px;
+    font-family: 'Quicksand', sans-serif; }
   .banner h3 {
-    font-size: 32px; }
+    font-size: 32px;
+    font-family: 'Quicksand', sans-serif; }
 
 nav {
   position: absolute;
@@ -68,6 +76,20 @@ li a:hover + .nav-effect {
   visibility: visible;
   transform: translate(0, 0); }
 
+@media (max-width: 400px) {
+  .banner h1 {
+    font-size: 48px; }
+  .banner h3 {
+    font-size: 22px; }
+  nav ul {
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 10px; }
+    nav ul li {
+      padding-bottom: 10px; } }
+
 #about .about-img {
   height: 300px;
   width: 300px;
@@ -77,7 +99,8 @@ li a:hover + .nav-effect {
   transition: .2s; }
 
 #about .content {
-  width: 50%; }
+  width: 50%;
+  max-height: 300px; }
 
 #loading-bar {
   width: 0px;
@@ -133,10 +156,18 @@ li a:hover + .nav-effect {
     height: 240px;
     width: 426px; } }
 
+@media (max-width: 615px) {
+  #project .project-gallery {
+    height: 120px;
+    width: 213px; }
+  footer i {
+    color: red; } }
+
 #technical .tech-container {
   width: 100%;
   height: 300px;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
 
 #technical h2 {
   position: absolute;
@@ -229,3 +260,22 @@ footer {
   height: 10vH;
   min-height: 110px;
   background-color: #333; }
+  footer i {
+    color: white;
+    transition: .2s;
+    font-size: 48px; }
+    footer i:hover {
+      color: #999;
+      transition: .2s; }
+  footer .author {
+    transition: .2s; }
+
+@media (max-width: 615px) {
+  footer i {
+    font-size: 32px;
+    transition: .2s; }
+  footer div {
+    margin: 0px; }
+  footer .author {
+    font-size: 12px;
+    transition: .2s; } }
