--- a/sass/about.scss
+++ b/sass/about.scss
@@ -11,6 +11,7 @@
 
     .content {
         width: 50%;
+        max-height: 300px;
     }
 }
 
@@ -41,14 +42,3 @@
         opacity: 0;
     }
 }
-
-// @media (max-width: 768px) {
-//     #about {
-//         .row {
-//             width: 100%;
-//         }
-//         .content {
-//             width: 100%;
-//         }
-//     }
-// }
