--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -4,4 +4,35 @@ footer {
     height: 10vH;
     min-height: 110px;
     background-color: #333;
+
+    i {
+        color: white;
+        transition: .2s;
+        font-size: 48px;
+
+        &:hover {
+            color: #999;
+            transition: .2s;
+        }
+    }
+
+    .author {
+        transition: .2s;
+    }
+}
+
+@media (max-width: 615px) {
+    footer{
+        i {
+            font-size: 32px;
+            transition: .2s;
+        }
+        div {
+            margin: 0px;
+        }
+        .author {
+            font-size: 12px;
+            transition: .2s;
+        }
+    }
 }
